tests/NormalTests/paczka1/small_fuzzy/96918163.err
Error in line 1: kJwl S749 77,6
Error in line 9: S443 S749 97,7
Error in line 5: 93kN S443 61,7
Error in line 6: nxGag S443 50,8
Error in line 14: S443 S443 79,45
